--- a/academie_franco/app/static/css/nav-land.css
+++ b/academie_franco/app/static/css/nav-land.css
@@ -7,9 +7,6 @@ body{
 	margin: 0;
 	padding: 0;
 }
-#nav{
-	background: linear-gradient(to right, white 20%, #5161ce 100%);
-}
 #i {
 	margin-right: 10px;
 }
@@ -24,7 +21,9 @@ body{
 	color: #fff;
 }
 .navbar-mainbg{
-	background-color: #5161ce;
+	background-color: rgba(81, 97, 206, 0.8);
+
+	/* opacity: 0.5; */
 	padding: 0px;
 }
 #navbarSupportedContent{
