--- a/academie_franco/app/templates/courses.html
+++ b/academie_franco/app/templates/courses.html
@@ -6,7 +6,43 @@
         <h3>Courses</h3>
     </div>
     <div class="card-body">
-        <p>Welcome to the Courses</p>
+        <!--<p>Welcome to the Courses</p>-->
+        <div class="container">
+            <h2>Select Number Of Rows</h2>
+                    <div class="form-group"> 	<!--		Show Numbers Of Rows 		-->
+                        <select class  ="form-control" name="state" id="maxRows">
+                             <option value="5000">Show ALL Rows</option>
+                             <option value="5">5</option>
+                             <option value="10">10</option>
+                             <option value="15">15</option>
+                             <option value="20">20</option>
+                             <option value="50">50</option>
+                             <option value="70">70</option>
+                             <option value="100">100</option>
+                        </select>
+                         
+                    </div>
+    
+                    <table class="table table-striped table-class" id= "table-id">
+                    
+                        <thead>
+                            <tr>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>instructor</th>
+                                <th>Date</th>
+                            </tr>
+                            
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Rajah Armstrong</td>
+                                <td>erat.neque@noncursusnon.ca</td>
+                                <td>1-636-140-1210</td>
+                                <td>Oct 26, 2015</td>
+                            </tr>
+                        </tbody>
+                    </table>
     </div>
 </div>
 </div>
