--- a/academie_franco/app/templates/landing.html
+++ b/academie_franco/app/templates/landing.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-custom navbar-mainbg" id="nav">
+    <!--<nav class="navbar navbar-expand-custom navbar-mainbg" id="nav">
       <div id="left-side-bg">
         <a class="navbar-brand navbar-logo" href="#"><img src="{{ url_for('static', filename="assets/images/logo/3.png") }}" alt="logo" id="logo"></a>
         <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,11 +55,43 @@
                     <a class="nav-link" href="javascript:void(0);"><i class="fas fa-info-circle" id="about-us-icon"></i>
                       About Us</a>
                 </li>
-                <!--<li class="nav-item">
+                <!-<li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy" id="i"></i>Documents</a>
-                </li>-->
+                </li>
             </ul>
         </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-custom navbar-mainbg" id="nav">
+      <div id="left-side-bg">
+        <a class="navbar-brand navbar-logo" href="#"><img src="{{ url_for('static', filename="assets/images/logo/3.png") }}" alt="logo" id="logo"></a>
+        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fas fa-bars text-white" id="i"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <div class="hori-selector">
+            <div class="left"></div>
+            <div class="right"></div>
+          </div>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt" id="i"></i>Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book" id="i"></i>Sign-In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone" id="i"></i>Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0);"><i class="fas fa-users" id="i"></i>Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0);"><i class="fas fa-info-circle" id="about-us-icon"></i>About Us</a>
+          </li>
+          </ul>
+      </div>
     </nav>
 
         <!-- header -->
