--- a/academie_franco/app/static/css/footer.css
+++ b/academie_franco/app/static/css/footer.css
@@ -1,15 +1,26 @@
+/* #footer {
+  
+  margin-top: 200px;
+} */
+
+/* #cont{
+  border: 2px solid red;
+} */
+
 .site-footer
 {
-  background-color:#26272b;
+  background-color:rgba(81, 97, 206, 1);
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
-  color:#737373;
+  color:white;
+  
 }
 .site-footer hr
 {
   border-top-color:#bbb;
-  opacity:0.5
+  opacity:0.5;
+  
 }
 .site-footer hr.small
 {
@@ -43,7 +54,7 @@
 }
 .footer-links a
 {
-  color:#737373
+  color:white
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
@@ -160,4 +171,81 @@
     margin-right:0;
     font-weight:600
   }
+}
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Allura|Josefin+Sans');
+/* /* 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+.team-sec{
+  background: #81c644;
+  font-family: 'Josefin Sans', sans-serif;
+} */
+
+.wrapper{
+  margin-top: 50px;
+}
+
+.wrapper h1{
+  font-family: 'Allura', cursive;
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.team{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.team .team_member{
+  background: #fff;
+  margin: 5px;
+  margin-bottom: 50px;
+  width: 300px;
+  padding: 20px;
+  line-height: 20px;
+  color: #8e8b8b;  
+  position: relative;
+}
+
+.team .team_member h3{
+  color: #81c644;
+  font-size: 26px;
+  margin-top: 50px;
+}
+
+.team .team_member p.role{
+  color: #ccc;
+  margin: 12px 0;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.team .team_member .team_img{
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.team .team_member .team_img img{
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  border-radius: 50%;
 }
