--- a/academie_franco/app/static/css/login.css
+++ b/academie_franco/app/static/css/login.css
@@ -165,7 +165,8 @@ body {
 .toggle {
   background-color: #512da8;
   height: 100%;
-  background: linear-gradient(to right, #ff8c00, #ff7f50);
+  background: linear-gradient(to right, #000000, #512da8);
+  /* background: linear-gradient(to right, #ff8c00, #ff7f50); */
   color: #fff;
   position: relative;
   left: -100%;
