added the test implimentation

--- a/academie_franco/app/templates/dashboard.html
+++ b/academie_franco/app/templates/dashboard.html
@@ -59,7 +59,7 @@
         sessionStorage.setItem('courseDescription', description);
         sessionStorage.setItem('courseId', id);
         sessionStorage.setItem('src', src);
-        console.log(src);
+        console.log(id);
     }
 </script>
 {% endblock %}
