--- a/academie_franco/app/templates/learning.html
+++ b/academie_franco/app/templates/learning.html
@@ -58,7 +58,8 @@
 
         function storeCourseID() {
             sessionStorage.setItem('courseId', sessionStorage.getItem('courseId'));
-            // console.log(courseId)
+            sessionStorage.setItem('userEmail', sessionStorage.getItem('userEmail'));
+            console.log('this is the eamil stored at learning', courseEmail)
         };
         
     </script>
