--- a/academie_franco/app/static/css/dashboard/dash.css
+++ b/academie_franco/app/static/css/dashboard/dash.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+
+#course-table {
+    margin-top: 40px;
+}
+
 *{
     margin: 0;
     padding: 0;
